--- a/src/styles/NavProducts/NavProducs.css
+++ b/src/styles/NavProducts/NavProducs.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   background-color: white;
-  position: -webkit-sticky;
   position: sticky;
   top: 60px;
   height: 100%;
@@ -12,14 +11,13 @@
   opacity: 0;
 }
 .Nav__productsHiden p {
-  letter-spacing: 1px;
+  letter-spacing: 2px;
 }
 
 .Nav__productsVisible {
   display: flex;
   flex-direction: column;
   background-color: white;
-  position: -webkit-sticky;
   position: sticky;
   top: 60px;
   height: 100%;
@@ -44,7 +42,7 @@
   padding: 10px 35px;
   height: 75px;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: start;
   transition: 0.5s;
   gap: 5px;
   width: 300px;
@@ -80,4 +78,6 @@
 
 .Nav__productsContainer a {
   text-decoration: none;
-}/*# sourceMappingURL=NavProducs.css.map */
+}
+
+/*# sourceMappingURL=NavProducs.css.map */
