--- a/src/styles/Options/Options.css
+++ b/src/styles/Options/Options.css
@@ -9,11 +9,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 10px;
 }
-.options__colorContainer img {
+.options__colorContainer .options_img {
   width: 50px;
-  border: 1px solid black;
-  border-radius: 3px;
-  box-shadow: 3px 5px 15px -3px #000000;
-}/*# sourceMappingURL=Options.css.map */
+}
+
+/*# sourceMappingURL=Options.css.map */
