--- a/src/styles/Options/Options.scss
+++ b/src/styles/Options/Options.scss
@@ -9,13 +9,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 10px;
   }
-  img {
+  .options_img {
     width: 50px;
-    border: 1px solid black;
-    border-radius: 3px;
-    -webkit-box-shadow: 3px 5px 15px -3px #000000;
-    box-shadow: 3px 5px 15px -3px #000000;
   }
 }
